<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logs_title"
        android:layout_width="252dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.7"
        android:gravity="center_vertical"
        android:text="@string/fragment_logs"
        android:textColor="#2C194E"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logs_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="4"
        android:background="@drawable/logs_border"
        android:fadeScrollbars="false"
        android:scrollIndicators="top"
        android:scrollbarSize="4dp"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="defaultPosition"
        tools:listitem="@layout/logs_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mailto"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="@string/mail"
            android:textColor="#2C194E"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <EditText
                android:id="@+id/textEmailAddress"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="42dp"
                android:text="@string/send" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>